@@ -6,6 +6,8 @@ Bug numbers are references to bugs in http://www.achievo.org/bugzilla
 
 Changes in ATK 5.3
 ------------------
++ Added config variable 'tplusesubdirs' to use subdirectories with the
+  smarty's cached and compiled templates. [Martin]
 + Implemented a search feature for the atk File editor class.
   You're now able to search on filenames. [Martin]
 + Added extraparams in atkTreeNode for putting extra params 
